# cmake-w9x

./: COPYING  README.md
cmake/: Windows.cmake  cl.cmake  common.cmake  compile.cmake  get_short_path.bat  link.cmake  overrides.cmake
sample/: CMakeLists.txt  helloworld.c  make-win16.bat  make-win32.bat
samples/: make-msc4.bat  make-msvc1.bat  make-msvc2.bat
samples/helloworld/: CMakeLists.txt  config.h  helloworld.c  helloworld.def  make-dos.bat  make-win1.bat  make-win16.bat  make-win32.bat
